name: rdioh
version: 0.1.0
category: Network, Rdio
license: MIT
author: Aditya Bhargava
maintainer: Aditya Bhargava <aditya at wefoundland.com>
stability: experimental
build-type: Simple
cabal-version: >= 1.6
synopsis: A Haskell wrapper for Rdio's API.
description: This library implements methods for Rdio's API.
			 It supports 2-legged and 3-legged OAuth.

library
  build-depends: json
               , hoauth
               , urlencoded
  exposed-modules: Rdioh

  hs-source-dirs: src
  ghc-options: -W -Wall
  extensions: FlexibleContexts
source-repository head
  type:     git
  location: git@github.com:egonSchiele/rdioh.git

