name: rdioh
version: 0.1.1
category: Network, API, Web
license: MIT
license-file: LICENSE
author: Aditya Bhargava
maintainer: Aditya Bhargava <aditya at wefoundland.com>
stability: experimental
build-type: Simple
cabal-version: >= 1.6
synopsis: A Haskell wrapper for Rdio's API.
description: This library implements methods for Rdio's API.
			 It supports 2-legged and 3-legged OAuth.

library
  build-depends: base >= 3 && <= 5 , mtl , MissingH , bytestring , json , hoauth , urlencoded
  exposed-modules: Rdioh, RdioResult

  hs-source-dirs: src
  extensions: FlexibleContexts

executable rdioh
  build-depends: base >= 3 && <= 5 , mtl , MissingH , bytestring , json , hoauth , urlencoded
  hs-source-dirs: src
  main-is: Main.hs

source-repository head
  type:     git
  location: git@github.com:egonSchiele/rdioh.git

